--- a/client/login.html
+++ b/client/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/stylesheet.css" />
-    <title>View</title>
+    <title>User Management System -Instagram</title>
   </head>
   <body>
     <div class="login-page">
@@ -20,7 +20,7 @@
           <input type="password"  id="password" placeholder="password" />
           <button id="submit">login</button>
           <p class="message">
-            Not registered? <a href="./index.html">Create an account</a>
+            Not registered? <a href="./register.html">Create an account</a>
           </p>
         </form>
       </div>
@@ -47,7 +47,7 @@
     const loginUser = async (payload) => {
       try {
 
-          const resp = await fetch("http://localhost:8081/login",{
+          const resp = await fetch("http://localhost:3000/login",{
             method:"POST",
             credentials: 'include',
           redirect: 'follow',
@@ -57,7 +57,7 @@
 
           const data = await resp.json();
           console.log(data)
-          window.location.href="http://localhost:5500/client/index.html";
+          window.location.href="http://localhost:5501/client/index.html";
         
       } catch (error) {
         console.log(error.message)
